{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 122,
  "lineage": "1f2ab35d-5a81-c525-3cc1-771922ff3281",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e725b84cb20dca5",
            "association_id": "eipassoc-09180ebaa915c7cad",
            "domain": "vpc",
            "id": "eipalloc-00e725b84cb20dca5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a68ea3ad56009561",
            "private_dns": "ip-10-0-0-58.ec2.internal",
            "private_ip": "10.0.0.58",
            "public_dns": "ec2-3-214-133-45.compute-1.amazonaws.com",
            "public_ip": "3.214.133.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cf04b436c94d7f7",
            "arn": "arn:aws:ec2:us-east-1:782863115905:instance/i-03bc413087e8d6c5a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bc413087e8d6c5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jesse-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba7d05f42554eee5",
            "private_dns": "ip-10-0-0-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.41",
            "public_dns": "ec2-54-234-9-94.compute-1.amazonaws.com",
            "public_ip": "54.234.9.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011d5fddb76fd3caa",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9a31c5204657199",
            "tags": {
              "Name": "Jesse-EC2"
            },
            "tags_all": {
              "Name": "Jesse-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0655fa3c01e56e727"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-0e3edde829fa39bc8",
            "id": "igw-0e3edde829fa39bc8",
            "owner_id": "782863115905",
            "tags": {
              "Name": "Jesse-IGW"
            },
            "tags_all": {
              "Name": "Jesse-IGW"
            },
            "vpc_id": "vpc-00a19a6e65ed5b8da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e725b84cb20dca5",
            "connectivity_type": "public",
            "id": "nat-0391a470f17ab3750",
            "network_interface_id": "eni-0a68ea3ad56009561",
            "private_ip": "10.0.0.58",
            "public_ip": "3.214.133.45",
            "subnet_id": "subnet-0f9a31c5204657199",
            "tags": {
              "Name": "Jesse-NGW"
            },
            "tags_all": {
              "Name": "Jesse-NGW"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0163f6c0e0908d3eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0391a470f17ab3750",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0163f6c0e0908d3eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_NAT",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e3edde829fa39bc8",
            "id": "r-rtb-08e463688523778c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e463688523778c3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0163f6c0e0908d3eb",
            "id": "rtb-0163f6c0e0908d3eb",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0391a470f17ab3750",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jesse-Private-RT"
            },
            "tags_all": {
              "Name": "Jesse-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a19a6e65ed5b8da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-08e463688523778c3",
            "id": "rtb-08e463688523778c3",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3edde829fa39bc8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jesse-Public-RT"
            },
            "tags_all": {
              "Name": "Jesse-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a19a6e65ed5b8da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d5f8c94845e90a5",
            "route_table_id": "rtb-0163f6c0e0908d3eb",
            "subnet_id": "subnet-0b67f2e5891721b8f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c46becf07dd57c02",
            "route_table_id": "rtb-0163f6c0e0908d3eb",
            "subnet_id": "subnet-0f9287ee53c401abc"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4787ad8add53aa1",
            "route_table_id": "rtb-08e463688523778c3",
            "subnet_id": "subnet-0f9a31c5204657199"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04661fbd8fed9397c",
            "route_table_id": "rtb-08e463688523778c3",
            "subnet_id": "subnet-0fc7c1ad80f94b1b6"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0b67f2e5891721b8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b67f2e5891721b8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jesse-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "Jesse-Private-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-00a19a6e65ed5b8da"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0f9287ee53c401abc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9287ee53c401abc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jesse-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "Jesse-Private-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-00a19a6e65ed5b8da"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0f9a31c5204657199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9a31c5204657199",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jesse-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "Jesse-Public-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-00a19a6e65ed5b8da"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0fc7c1ad80f94b1b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc7c1ad80f94b1b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jesse-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "Jesse-Public-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-00a19a6e65ed5b8da"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-00a19a6e65ed5b8da",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026dd4c5e6d88a282",
            "default_route_table_id": "rtb-0801e12feecaf37de",
            "default_security_group_id": "sg-0655fa3c01e56e727",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a19a6e65ed5b8da",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-081edda1607a6a1c9",
            "ipv6_cidr_block": "2600:1f18:2028:6e00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0801e12feecaf37de",
            "owner_id": "782863115905",
            "tags": {
              "Name": "jesse_vpc"
            },
            "tags_all": {
              "Name": "jesse_vpc"
            }
          }
        }
      ]
    }
  ]
}